# chess-ai-engine

./: .gitignore  CMakeLists.txt  DEPLOYMENT_PIPELINE.md  Dockerfile  Project_Detailed_Documentation.md  README.md  project_analysis.md
engine/: CMakeLists.txt
engine/include/: bitboard.h  movegen.h  nn_eval.h  position.h  search.h  types.h  uci.h
engine/src/: main.cpp  movegen.cpp  nn_eval.cpp  position.cpp  search.cpp
engine_cpp/: CMakeLists.txt
engine_cpp/include/: engine_api.h  move.h  nn_eval.h  perft.h  search.h
engine_cpp/src/: bitboard.cpp  deploy_main.cpp  engine_api.cpp  nn_eval.cpp  perft.cpp  search.cpp  uci.cpp
frontend/: app.js  index.html  style.css
ml_training/: NN.ipynb
scripts/: convert_model.py
server/: app.py  test.py
training/: config.py  dataset.py  export_onnx.py  model.py  requirements.txt  train.py
